Fix tile body not showing up in IE11

--- a/app/assets/css/ie-mitigation.less
+++ b/app/assets/css/ie-mitigation.less
@@ -18,4 +18,8 @@
   .tile--zoomed .tile__header {
     margin-left: calc(50vw + 1px);
   }
+
+  .tile--zoomed .tile__body {
+    position: static;
+  }
 }
